--- a/TodoList/Views/Task/Tasks.cshtml
+++ b/TodoList/Views/Task/Tasks.cshtml
@@ -1,4 +1,5 @@
-﻿@model TaskViewModel
+﻿@using TodoList.Models.InputDTOs;
+@model TaskInputViewModel;
 
 <div class="task-container">
     <div class="tasks">
@@ -11,6 +12,7 @@
         </div>
         <div class="group">
             <input asp-for="ExpirationDate"  type="datetime-local" />
+            <span asp-validation-for="ExpirationDate" class="text-danger"></span>
         </div>
 
         <div class="group">
