--- a/TodoList/wwwroot/css/todo.css
+++ b/TodoList/wwwroot/css/todo.css
@@ -53,4 +53,8 @@ input,select{
     display: flex;
     flex-direction: column;
 }
-
+.changer{
+    background-color: lightgreen;
+    padding:5px;
+    border: 1px solid lightgray;
+}
